movede files to project folder

--- a/app/instaimage.html
+++ b/app/instaimage.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js">
+    <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js">-->
 
     </script>
-    <link href="css/instastyle.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
 <div id="image">
 
-<ul id="tags">
+<!--<ul id="tags">-->
 
 </ul>
 </div>
