added browserSync and watch task

--- a/app/instaimage.html
+++ b/app/instaimage.html
@@ -12,9 +12,9 @@
 
 <div id="image">
 
-<!--<ul id="tags">-->
+<!--<ul id="tags">
 
-</ul>
+</ul>-->
 </div>
 <script src="js/tools.js"></script>
 <script src="js/key.js"></script>
