--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,10 @@
 <body>
 
 <div class="insta">
-    <header class="header"><h1>INSTA MARIO</h1></header>
+    <header class="header">
+        <h1>INSTA MARIO</h1>
+        <div class="header__profile"></div>
+    </header>
     <nav class="nav">NAVI</nav>
     <main class="main">
     <div class="image__item" style="background-image: url(&quot;https://scontent.cdninstagram.com/vp/8051228c068fd4b6d6b616667e62c97a/5B27ADAB/t51.2885-15/s640x640/sh0.08/e35/14504851_678086152360889_8411507434182410240_n.jpg&quot;);"><div class="image__tag"><span>#greyscales #appenzellerland #mueschgsehha</span></div></div>
