added autprefixer and started with jshint

--- a/app/index.html
+++ b/app/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title></title>
     <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js">-->
 
     </script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+            <div class="insta">
+                <header class="header">
+                    <h1>Insta Mario</h1>
+                    <div class="header__profile"></div>
+                </header>
+                <nav class="navi">NAVI</nav>
+                <main class="main"></main>
+                <footer class="footer">FOOTER</footer>
+            </div>
 
-<div id="image">
 
-<!--<ul id="tags">
-
-</ul>-->
-</div>
 <script src="js/tools.js"></script>
 <script src="js/key.js"></script>
 <script src="js/getInstaContent.js"></script>
