finish gulpfile in insta

--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <!--<script src="https://code.jquery.com/jquery-3.2.1.min.js">-->
-
+    <!-- build:css css/styles.min.css -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet">
+    <!-- endbuild -->
 </head>
 <body>
             <div class="insta">
@@ -18,11 +19,11 @@
                 <footer class="footer">FOOTER</footer>
             </div>
 
-
+<!-- build:js js/main.min.js -->
 <script src="js/tools.js"></script>
 <script src="js/key.js"></script>
 <script src="js/getInstaContent.js"></script>
-
+<!-- endbuild -->
 
 
 </body>
